[package]
name = "mitm_training"
description = "Man-In-The-Middle code skeleton"
edition = "2024"
version = "1.0.0"
rust-version = "1.85.1"
license = "MIT"
authors = ["thomas.halipre@synacktiv.com", "corentin.liaud@synacktiv.com"]

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
http = "1.3.1"
httparse = "1.10.1"
log = "0.4.28"
pnet = "0.35.0"
rand = "0.9.2"
rustls = "0.23.32"
ureq = "3.1.2"
