[package]
name = "mitm_training"
description = "Man-In-The-Middle code skeleton"
edition = "2024"
version = "1.0.0"
rust-version = "1.85.1"
license = "MIT"
authors = ["thomas.halipre@synacktiv.com", "corentin.liaud@synacktiv.com"]

[dependencies]
color-eyre = "0.6.5"
http = "1.3.1"
httparse = "1.10.1"
pnet = "0.35.0"
rand = "0.9.2"
rustls = "0.23.32"
ureq = "3.1.2"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
